--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.login.LoginActivity">
 
-    <!--modification메롱메롱ㅁ메로-->
     <TextView
 
         android:id="@+id/appTitle"
@@ -29,7 +28,7 @@
         android:text="@string/email" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/email_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_email"
@@ -41,14 +40,14 @@
         android:id="@+id/tv_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/email"
+        android:layout_below="@id/email_edittext"
         android:layout_centerInParent="true"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:text="@string/password" />
 
     <EditText
-        android:id="@+id/et_password"
+        android:id="@+id/password_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_password"
@@ -59,7 +58,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_password"
+        android:layout_below="@+id/password_edittext"
         android:layout_marginTop="11dp">
 
         <Button
@@ -68,6 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:layout_weight="1"
+            android:onClick="signUp"
             android:text="@string/signup" />
 
         <Button
@@ -82,7 +82,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/testsync"
+        android:id="@+id/test_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="test" />
