--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,58 +9,75 @@
         android:id="@+id/mainPage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="150dp"
         android:fontFamily="@font/shrikhand"
         android:text="Main Page"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/search_btn"
+        app:layout_constraintBottom_toTopOf="@+id/search_trainer_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/search_btn"
+        android:id="@+id/search_trainer_btn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/shrikhand"
-        android:text="@string/search"
+        android:text="@string/search_trainer"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/search_trainee_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mainPage" />
+
+    <Button
+        android:id="@+id/search_trainee_btn"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/shrikhand"
+        android:text="@string/search_trainee"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/mypage_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_trainer_btn" />
 
     <Button
         android:id="@+id/mypage_btn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/shrikhand"
         android:text="@string/mypage"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/chat_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_trainee_btn" />
 
     <Button
         android:id="@+id/chat_btn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="50dp"
         android:fontFamily="@font/shrikhand"
         android:text="@string/chat"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mypage_btn" />
 
     <Button
         android:id="@+id/logout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="152dp"
+        android:layout_marginBottom="200dp"
         android:fontFamily="@font/shrikhand"
         android:gravity="right"
         android:text="@string/logout"
