--- a/app/src/main/res/layout/activity_profile_set.xml
+++ b/app/src/main/res/layout/activity_profile_set.xml
@@ -10,24 +10,13 @@
         android:id="@+id/profileSetting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="20dp"
         android:fontFamily="@font/shrikhand"
         android:text="@string/profile_setting"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/userImage"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/userImage"
-        android:layout_width="79dp"
-        android:layout_height="72dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileSetting"
-        app:srcCompat="@android:drawable/ic_menu_gallery" />
 
     <RadioGroup
         android:id="@+id/userType"
@@ -178,25 +167,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="29dp"
         android:layout_marginBottom="35dp"
         android:fontFamily="@font/shrikhand"
         android:text="User Name : "
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/UserType"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userImage"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout2"
         android:layout_width="223dp"
         android:layout_height="53dp"
         android:layout_marginBottom="13dp"
         app:layout_constraintBottom_toTopOf="@+id/userType"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/username"
-        app:layout_constraintTop_toBottomOf="@+id/userImage"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintStart_toEndOf="@+id/username">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/username_edittext"
