--- a/app/src/main/res/layout/activity_search_trainee.xml
+++ b/app/src/main/res/layout/activity_search_trainee.xml
@@ -11,11 +11,10 @@
         android:id="@+id/searchTrainee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/shrikhand"
         android:text="Search Trainee"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/layout2"
+        app:layout_constraintBottom_toTopOf="@+id/trainee_recycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,80 +26,17 @@
         android:text="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/layout1"
-        android:layout_width="193dp"
-        android:layout_height="210dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toStartOf="@+id/layout2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchTrainee">
+        app:layout_constraintTop_toBottomOf="@+id/trainee_recycler" />
 
-        <TextView
-            android:id="@+id/username_textview1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/sex_textview1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/region_textview1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/description_textview1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout2"
-        android:layout_width="216dp"
-        android:layout_height="209dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trainee_recycler"
+        android:layout_width="400dp"
+        android:layout_height="420dp"
+        app:layout_constraintBottom_toTopOf="@+id/back_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchTrainee">
-
-        <TextView
-            android:id="@+id/username_textview2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/sex_textview2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/region_textview2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/description_textview2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="TextView" />
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchTrainee" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
