--- a/app/src/main/res/layout/activity_trainer_mypage.xml
+++ b/app/src/main/res/layout/activity_trainer_mypage.xml
@@ -27,12 +27,12 @@
         android:fontFamily="@font/shrikhand"
         android:text="Profile"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/profile_region"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/profile_region"
         android:layout_width="322dp"
         android:layout_height="104dp"
         android:layout_marginBottom="14dp"
